Fix subtitle spacing

--- a/docs/src/components/Subtitle/Subtitle.css
+++ b/docs/src/components/Subtitle/Subtitle.css
@@ -10,4 +10,8 @@
     margin-bottom: 1.5rem;
     gap: var(--space-12);
   }
+
+  .MdH1 + .Subtitle {
+    margin-top: -0.75rem;
+  }
 }
